# parsel

./: .ghci.repl  Parsel.dump-stg-final  README.md  default.nix  hie.yaml  parsel-parse.cabal  parsel.cabal  release.nix  shell.nix
bench/speed/: Main.hs
examples/parse-lisp/: Main.hs  parse-lisp.cabal  shell.nix
nix/: pkgs.nix
nix/extensions/: emit.nix  parse-lisp.nix  parsel-parse.nix  parsel.nix  source-locations.nix
src/Data/: Vector.hs
src/Text/: Parsel.hs
src/Text/Parsel/: Core.hs  Eval.hs  Grammar.hs  Parse.hs  ParseError.hs  Pattern.hs
src/Text/Parsel/Eval/: Context.hs  Core.hs  Error.hs  Store.hs
src/Text/Parsel/Grammar/: Core.hs
src/Text/Parsel/Parse/: Context.hs  Core.hs  ParseContext.hs  ParseLoc.hs  ParseState.hs  Store.hs
test/: Test.hs
test/Test/: Core.hs  Parsel.hs
test/Test/Parsel/: Single.hs
